<resources>
    <string name="app_name">Kalender</string>

    <string-array name="weekDays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="weekDaysS">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="weekDaysSS">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="months">
        <item>Januar</item>
        <item>Februar</item>
        <item>Marts</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="dummyDate">01</string>
    <string name="dummyWeekDay">Mon</string>
    <string name="dummyWeek">Week: 1</string>
    <string name="dummyContent">Nothing planned</string>

    <string name="drawerToggleOpen">Open</string>
    <string name="drawerToggleClose">Close</string>

    <string name="week_word">Week</string>

    <string name="menuAddEvent">Add Event</string>
    <string name="menuMySchedule">See Events</string>
    <string name="menuSettings">Settings</string>
    <string name="menuExit">Exit</string>

    <string name="settingsTitle">Settings</string>
    <string name="addEventTitle">Add Event</string>
    <string name="seeEventsTitle">Current Events</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exitDLMSG">Do you want to exit?</string>
    <string name="exitDLTTL">Exit Application</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



    <string name="addEvent_activitytitle">Add a new event</string>
    <string name="addEvent_eventname">Name of event</string>
    <string name="addEvent_startdate">Start date</string>
    <string name="addEvent_enddate">End date</string>
    <string name="addEvent_eventtype">Event type</string>
    <string name="addEvent_setalarm">Set alarm</string>
    <string name="addEvent_PH_name">Name</string>
    <string name="addEvent_PH_startdate">Date of start</string>
    <string name="addEvent_PH_enddate">Date of end</string>
    <string name="addEvent_PH_eventtype">Event type</string>
    <string name="addEvent_PH_alarm">Time before</string>



    <string-array name="addevent_eventtypes">
        <item>Sport</item>
        <item>Not sport</item>
    </string-array>

</resources>
